<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.autotest.MainActivity">
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_size"
        android:textColor="@android:color/holo_green_light"
        android:textAlignment="center"
        android:text="测试信息"
        android:textSize="@dimen/info_font_size"/>
    <TextView
        android:layout_below="@id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:id="@+id/layout_ops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <Button
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/op_start"
            android:textSize="@dimen/op_font_size"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info"
        android:layout_above="@id/layout_ops"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/tv_test_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_serial"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_Usb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_usb"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_crash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_crash"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_trumpet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_trumpet"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_headset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_headset"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_network"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_wifi"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
            <TextView
                android:id="@+id/tv_test_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_bt"
                android:textColor="@color/color_test"
                android:textSize="@dimen/test_opts_font_size"
                />
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="测试详情"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:textSize="@dimen/detail_font_size"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
